# fav_control

./: CMakeLists.txt  package.xml
cfg/: Mix.cfg  PitchControl.cfg  RollControl.cfg  Setpoints.cfg  XControl.cfg  YControl.cfg  YawControl.cfg  ZControl.cfg
launch/: control.launch  depth_control.launch
nodes/: mixer.py  pitchController.py  rollController.py  setpoints.py  xController.py  xController.py.py  yController.py  yawController.py  zController.py
